k8s/backend-k8s/deployment-hpa.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      name: backend
  replicas: 3
  strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%    
  template:
    metadata:
      labels:
        name: backend
    spec:
      containers:
        - name: app
          image: aallou/backend-app-nodejs:v1
          ports:
            - containerPort: 9090
          resources:
            requests:
              cpu: "20m"
