k8s/backend-k8s/deployment-readiness.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      name: backend
  template:
    metadata:
      labels:
        name: backend
    spec:
      containers:
        - name: app
          image: aallou/backend-app-nodejs:v1
          ports:
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /not-found
              port: 9090
            initialDelaySeconds: 10
            periodSeconds: 5
