k8s/backend-k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      name: backend
  template:
    metadata:
      labels:
        name: backend
    spec:
      containers:
        - name: app
          image: aallou/backend-app-nodejs:v1
          ports:
            - containerPort: 9090
