k8s/backend-k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 9090
  selector:
    name: backend
